--- a/app/src/main/res/layout/activity_user_configuration.xml
+++ b/app/src/main/res/layout/activity_user_configuration.xml
@@ -29,11 +29,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_Reconfigurable"
+        android:id="@+id/btn_Reconfigure"
         android:layout_width="197dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
-        android:text="Reconfigurable"
+        android:text="Reconfigure"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_F1" />
