--- a/app/src/main/res/layout/activity_interactive_control.xml
+++ b/app/src/main/res/layout/activity_interactive_control.xml
@@ -109,9 +109,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/switch1"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="120dp"
+        android:layout_toStartOf="@+id/calibration_button"
         android:text="Run" />
+
+    <Button
+        android:id="@+id/calibration_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/switch1"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="40dp"
+        android:text="Cali" />
 
     <!--android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
